fixed mobile menu visibility

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -110,7 +110,7 @@
     left: 0;
     width: 100vw;
     height: 100vh;
-    display: flex;
+    display: none;
     gap: 20px;
     flex-direction: column;
     justify-content: center;
@@ -144,5 +144,8 @@
     }
     .nav-main{
         top: 0px;
+    }
+    .mobile-menu{
+        display: flex;
     }
 }
